--- a/views/course/join.pug
+++ b/views/course/join.pug
@@ -12,7 +12,7 @@ block content
                     <p class="text-base text-red-500" >#{error}</p>
             </div>
             <div class="flex justify-end items-center" >
-                <a class="text-blue-500 mr-5" href="javascript:history.back()">Cancel</a>
+                <a class="text-blue-500 mr-5" href="/course/home">Cancel</a>
                 <input class="px-4 py-2 bg-gray-900 rounded text-white cursor-pointer" type="submit" value="Join">
             </div>
         </form>
