--- a/views/user/edit.pug
+++ b/views/user/edit.pug
@@ -3,7 +3,7 @@ extend ../layout
 block content
     include ../components/navbar
     <div class="flex justify-center items-center" >
-        <form class="w-80 border rounded-md shadow-md py-4 px-6 mt-8 bg-white" action="/user/profile/edit" method="post">
+        <form class="w-80 border rounded-md shadow-md py-4 px-6 mt-8 mx-3 bg-white" action="/user/profile/edit" method="post">
             <h1 class="font-bold text-3xl mb-2" >Edit profile</h1>
             <div class="mb-2" >
                 <label class="block" for="name">Name</label>
@@ -26,7 +26,7 @@ block content
                 <label class="block" for="email">Email</label>
                 <input class="rounded border border-gray-900 p-1 w-full" type="email" name="email" value="#{user.email}" required>
             </div>
-            <div class="flex justify-end" >
+            <div class="flex justify-end items-center" >
                 <a class="text-blue-500 mr-5" href="javascript:history.back()">Cancel</a>
                 <input class="px-4 py-2 bg-gray-900 rounded text-white cursor-pointer" type="submit" value="Update">
             </div>
