--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -2,28 +2,30 @@ extend ../layout
 
 block content
     include ../components/navbar
-    <div class="px-6 mt-4" >
-        <div class="flex justify-between" >
-            <h1 class="text-2xl font-bold" >Profile</h1>
-            <div class="flex" >
-                <a class="bg-gray-900 py-2 rounded text-white w-20 text-center mr-3" href="/user/profile/edit">Edit</a>
-                <a class="bg-gray-900 py-2 rounded text-white w-20 text-center" href="/user/logout">Logout</a>
+    <div class="flex justify-center" >
+        <div class="px-6 mt-4 w-full max-w-4xl" >
+            <div class="flex justify-between" >
+                <h1 class="text-3xl font-bold" >Profile</h1>
+                <div class="flex" >
+                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center mr-3" href="/user/profile/edit">Edit</a>
+                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center" href="/user/logout">Logout</a>
+                </div>
             </div>
-        </div>
-        <div class="mb-2" >
-            <p class="font-semibold" >Name</p>
-            <p>#{user.name}</p>
-        </div>
-        <div class="mb-2" >
-            <p class="font-semibold" >Email</p>
-            <p>#{user.email}</p>
-        </div>
-        <div class="mb-2">
-            <p class="font-semibold" >Gender</p>
-            <p>#{user.gender}</p>
-        </div>
-        <div>
-            <p class="font-semibold" >Age</p>
-            <p>#{user.age} years old</p>
+            <div class="mb-2" >
+                <p class="font-semibold" >Name</p>
+                <p>#{user.name}</p>
+            </div>
+            <div class="mb-2" >
+                <p class="font-semibold" >Email</p>
+                <p>#{user.email}</p>
+            </div>
+            <div class="mb-2">
+                <p class="font-semibold" >Gender</p>
+                <p>#{user.gender}</p>
+            </div>
+            <div>
+                <p class="font-semibold" >Age</p>
+                <p>#{user.age} years old</p>
+            </div>
         </div>
     </div>
