--- a/views/course/create.pug
+++ b/views/course/create.pug
@@ -14,7 +14,7 @@ block content
                 <textarea class="rounded border border-gray-900 p-1 w-full" name="description" cols="30" rows="3" required></textarea>
             </div>
             <div class="flex justify-end items-center" >
-                <a class="text-blue-500 mr-5" href="javascript:history.back()">Cancel</a>
+                <a class="text-blue-500 mr-5" href="/course/home">Cancel</a>
                 <input class="px-4 py-2 bg-gray-900 rounded text-white cursor-pointer" type="submit" value="Create">
             </div>
         </form>
