--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Check-It</title>
+    <title>MyClass</title>
 </head>
 <body class="bg-gray-100" >
     block content
