--- a/views/course/home.pug
+++ b/views/course/home.pug
@@ -8,16 +8,16 @@ block content
     <section class="px-4 mb-6">
         <div class="flex justify-between mb-2" >
             <p class="text-xl font-semibold">My Courses</p>
-            <a class="flex justify-center items-center py-1 bg-gray-900 text-white rounded w-24"  href="/course/create">
+            <a class="flex justify-center items-center hover:bg-gray-600 py-1 bg-gray-900 text-white rounded w-24"  href="/course/create">
                 <span class="material-icons text-base" >add</span>
                 <p>Create</p>
             </a>
         </div>
-        <div class="flex">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2 md:grid-cols-3">
             if myCourses.length == 0
                 <p>You don't have any course yet.</p>
             each course in myCourses
-                <a class="border rounded shadow w-40 p-2 mx-1 bg-white" href="/course/view/#{course._id}" >
+                <a class="border rounded shadow p-2 bg-white hover:shadow-xl hover:bg-gray-300" href="/course/view/#{course._id}" >
                     <p class="font-semibold" >#{course.name}</p>
                     <p>Code: #{course._id}</p>
                 </a>
@@ -27,16 +27,16 @@ block content
     <section class="px-4">
         <div class="flex justify-between mb-2" >
             <p class="text-xl font-semibold">Enrollments</p>
-            <a class="flex justify-center items-center py-1 bg-gray-900 text-white rounded w-24"  href="/course/join">
+            <a class="flex justify-center items-center hover:bg-gray-600 py-1 bg-gray-900 text-white rounded w-24"  href="/course/join">
                 <span class="material-icons text-base" >add</span>
                 <p>Join</p>
             </a>
         </div>
-        <div class="flex">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2 md:grid-cols-3">
             if enrollments.length == 0
                 <p>You are not enrolled in any course.</p>
             each course in enrollments
-                <a class="border rounded shadow w-40 p-2 mx-1 bg-white" href="/course/view/#{course.courseId}" >
+                <a class="border rounded shadow p-2 bg-white hover:shadow-xl hover:bg-gray-300" href="/course/view/#{course.courseId}" >
                     <p class="font-semibold" >#{course.courseName}</p>
                     <p>Instructor: #{course.instructor}</p>
                 </a>
