--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout.pug
 block content
     include components/navbar.pug
     <div class="flex flex-col items-center justify-center h-96" >
-        <h1 class="text-3xl font-bold mb-3" >Welcome to Check-it</h1>
-        <a class="py-2 px-4 text-white bg-gray-900 rounded shadow" href="/course/home">Go to My Dashboard</a>
+        <h1 class="text-5xl font-bold mb-4 mx-4 text-center" >Welcome to MyClass</h1>
+        <p class="mb-8 text-xl mx-4 text-center" >The next generation e-learning platform for students and teachers.</p>
+        <a class="py-2 mx-4 px-4 text-white bg-gray-900 rounded shadow-md hover:bg-gray-400 hover:text-black" href="/course/home">Go to My Dashboard</a>
     </div>
