--- a/views/user/profile.pug
+++ b/views/user/profile.pug
@@ -7,8 +7,8 @@ block content
             <div class="flex justify-between" >
                 <h1 class="text-3xl font-bold" >Profile</h1>
                 <div class="flex" >
-                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center mr-3" href="/user/profile/edit">Edit</a>
-                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center" href="/user/logout">Logout</a>
+                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center mr-3 hover:bg-gray-300 hover:text-black" href="/user/profile/edit">Edit</a>
+                    <a class="bg-gray-900 py-2 rounded text-white w-20 text-center hover:bg-gray-300 hover:text-black" href="/user/logout">Logout</a>
                 </div>
             </div>
             <div class="mb-2" >
