update students list

--- a/views/course/students.pug
+++ b/views/course/students.pug
@@ -12,7 +12,7 @@ block content
             <hr class="border bg-gray-700 my-2" >
             each student, index in students
                 <div class="flex" >
-                    <p class="w-12" >#{index}</p>
+                    <p class="w-12" >#{index + 1}</p>
                     <p>#{student.name}</p>
                 </div>
         </div>
